<resources>
    <string name="app_name">Contacts</string>
    <string name="buttonAdd">Добавить</string>
    <string name="editSurname">Фамилия</string>
    <string name="editName">Имя</string>
    <string name="editPatronimyc">Отчество</string>
    <string name="editPhone">Телефон</string>
    <string name="editEmail">E-mail</string>
    <string name="buttonSave">Сохранить</string>
    <string name="todo">TODO</string>
</resources>
