<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageEdit"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:onClick="onSelectPhoto"
                app:srcCompat="@mipmap/ic_launcher"
                tools:ignore="ContentDescription" />

            <EditText
                android:id="@+id/editSurname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/editSurname"
                android:inputType="textPersonName"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/editName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/editName"
                android:inputType="textPersonName"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/editPatronimyc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/editPatronimyc"
                android:inputType="textPersonName"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/editPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/editPhone"
                android:inputType="phone"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/editEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/editEmail"
                android:inputType="textEmailAddress"
                tools:ignore="Autofill"/>

            <Button
                android:id="@+id/buttonSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onSaveClick"
                android:text="@string/buttonSave" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>